chore: manifest for extension

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
+  "author": "ntwigs",
+  "manifest_version": 3,
+  "short_name": "Hourly",
+  "name": "Hourly",
+  "description": "Convert that old boring money into something fun - like burgers.",
+  "version": "0.0.1",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "action": {
+    "default_title": "Hourly",
+    "default_popup": "index.html"
+  }
 }
