--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,7 @@
   "name": "Hourly",
   "description": "Convert that old boring time into something fun - like burgers.",
   "version": "0.0.1",
+  "permissions": ["storage"],
   "web_accessible_resources": [{ 
     "resources": ["static/media/*.svg"],
     "matches": ["<all_urls>"]
