--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["https://track.toggl.com/timer"],
-      "js": ["./static/js/content.js", "./static/js/0.chunk.js"],
+      "js": ["./static/js/content.js"],
       "all_frames": false,
       "run_at": "document_end"
     }
