--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.162",
     "@types/styled-components": "^5.1.15",
+    "craco-alias": "^3.0.1",
     "html-webpack-plugin": "^5.5.0"
   }
 }
