--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,7 @@
   ],
   "content_scripts": [
     {
-      "matches": ["https://track.toggl.com/timer"],
+      "matches": ["https://track.toggl.com/*"],
       "js": ["./static/js/content.js"],
       "all_frames": false,
       "run_at": "document_end"
